manifests/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sports
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sports
  template:
    metadata:
      labels:
        app: sports
    spec:
      containers:
        - image: docker.io/bigsidhu/sports-client:099989cb679aff0cac607494c54ebd252b24eb06
          name: sports-client
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 80
              name: 80tcpport
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
        - image: docker.io/bigsidhu/sports-api:099989cb679aff0cac607494c54ebd252b24eb06
          name: sports-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: 8000tcpport
      volumes:
        - name: config-volume
          configMap:
            name: sports-nginx-config
      restartPolicy: Always
      dnsPolicy: Default
