manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sports
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: tcpport80
  selector:
    app: sports
